# llm_eval_ops

./: .envrc  .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
llm_eval_ops/: __init__.py  config.py
llm_eval_ops/data/: make_dataset.py
llm_eval_ops/evaluation/: eval.py
llm_eval_ops/model/: llm.py
llm_eval_ops/run/: run_pipe.py
requirements/: requirements-dev.txt
